--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class = "chat-container">
         <div class = "chat-box"></div>
         <div class="input-area">
-            <input type = "text" id ="user-input" placeholdder = "ask something..."/>
-            <button id = "send-btn">Send</button>
+            <input type="text" id="user-input" placeholder="ask something..." />
+            <button id="send-btn" class="send-btn">Send</button>
         </div>
     </div>
     
