--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class = "chat-container">
-        <div class = "chat-box"></div>
+    <div class="chat-container">
+        <div id="chat-box" class="chat-box"></div> <!-- Added id="chat-box" -->
         <div class="input-area">
             <input type="text" id="user-input" placeholder="ask something..." />
             <button id="send-btn" class="send-btn">Send</button>
         </div>
     </div>
     
-    <script src = "script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
